--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Diego Alonso Moscoso Yana</title>
     <link href="./Estilo de pág.css" rel="stylesheet" />  
+    <meta name="google-site-verification" content="KDbw_qpTLCN6xCDBL4K15AUJHFJsZIEOciKAyW8xOWY" />
+    
 </head>
 
 <body>
